// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component renders correctly Table Component with Mock Data 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          id
          <select
            className="custom-select"
            name="id"
            onChange={[Function]}
            value="asc"
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          userId
          <select
            className="custom-select"
            name="userId"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Title
          <select
            className="custom-select"
            name="title"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Completed ?
          <select
            className="custom-select"
            name="completed"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Orange 
          &lt;--&gt;
           Black
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="2"
      >
        <td>
          2
        </td>
        <td />
        <td>
          this is test
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
      <tr
        key="1"
      >
        <td>
          1
        </td>
        <td />
        <td>
          delectus aut autem
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
      <tr
        key="3"
      >
        <td>
          3
        </td>
        <td />
        <td>
          quis ut nam facilis et officia qui
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
      <tr
        key="4"
      >
        <td>
          4
        </td>
        <td />
        <td>
          quo laboriosam deleniti aut qui
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Component renders correctly Table Component with search data 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          id
          <select
            className="custom-select"
            name="id"
            onChange={[Function]}
            value="asc"
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          userId
          <select
            className="custom-select"
            name="userId"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Title
          <select
            className="custom-select"
            name="title"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Completed ?
          <select
            className="custom-select"
            name="completed"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Orange 
          &lt;--&gt;
           Black
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="2"
      >
        <td>
          2
        </td>
        <td />
        <td>
          this is test
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
      <tr
        key="4"
      >
        <td>
          4
        </td>
        <td />
        <td>
          quo laboriosam deleniti aut qui
        </td>
        <td>
          Not Completed
        </td>
        <td>
          <button
            className="btn btn-info"
            onClick={[Function]}
          >
            Orange 
            &lt;--&gt;
             Black
             
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Component renders correctly Table Component without mock data 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          id
          <select
            className="custom-select"
            name="id"
            onChange={[Function]}
            value="asc"
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          userId
          <select
            className="custom-select"
            name="userId"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Title
          <select
            className="custom-select"
            name="title"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Completed ?
          <select
            className="custom-select"
            name="completed"
            onChange={[Function]}
            value=""
          >
            <option
              value=""
            >
              Order
            </option>
            <option
              value="asc"
            >
              Asc
            </option>
            <option
              value="dec"
            >
              Dec
            </option>
          </select>
        </th>
        <th>
          Orange 
          &lt;--&gt;
           Black
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          No Results found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
